# Chis-

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp  makefile  reformat.sh
board/: gomoku.hpp  gomoku_arrayboard.hpp  gomoku_bitboard.hpp  gomoku_moves.hpp  iterator.hpp  mappings.hpp  operator.hpp  types.h
gomocup/: main.cpp  protocol.hpp
resource/: build.py  patterns.cpp  patterns.h  patterns_by_wind23.txt
search/: Solution.hpp  alpha_beta.hpp  solution.hpp
test/: board_test.cpp
utils/: types.h  zobrist_hash.hpp
